metadata improvements
- Add option for using metadata value as measurement name
- Code improvements

Also-By: Johannes Ott <info@johannes-ott.net>
Signed-Off-By: Jan N. Klug <jan.n.klug@rub.de>