@@ -13,15 +13,14 @@
  */
 package org.smarthomej.persistence.influxdb.internal.influx1;
 
-import static org.smarthomej.persistence.influxdb.internal.InfluxDBConstants.COLUMN_TIME_NAME_V1;
-import static org.smarthomej.persistence.influxdb.internal.InfluxDBConstants.COLUMN_VALUE_NAME_V1;
-import static org.smarthomej.persistence.influxdb.internal.InfluxDBConstants.FIELD_VALUE_NAME;
+import static org.smarthomej.persistence.influxdb.internal.InfluxDBConstants.*;
 
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.concurrent.TimeUnit;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -35,7 +34,9 @@ import org.influxdb.dto.QueryResult;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.smarthomej.persistence.influxdb.InfluxDBPersistenceService;
+import org.smarthomej.persistence.influxdb.internal.FilterCriteriaQueryCreator;
 import org.smarthomej.persistence.influxdb.internal.InfluxDBConfiguration;
+import org.smarthomej.persistence.influxdb.internal.InfluxDBMetadataService;
 import org.smarthomej.persistence.influxdb.internal.InfluxDBRepository;
 import org.smarthomej.persistence.influxdb.internal.InfluxPoint;
 import org.smarthomej.persistence.influxdb.internal.InfluxRow;
@@ -50,12 +51,14 @@ import org.smarthomej.persistence.influxdb.internal.UnnexpectedConditionExceptio
 @NonNullByDefault
 public class InfluxDB1RepositoryImpl implements InfluxDBRepository {
     private final Logger logger = LoggerFactory.getLogger(InfluxDB1RepositoryImpl.class);
-    private InfluxDBConfiguration configuration;
+    private final InfluxDBConfiguration configuration;
+    private final InfluxDBMetadataService influxDBMetadataService;
     @Nullable
     private InfluxDB client;
 
-    public InfluxDB1RepositoryImpl(InfluxDBConfiguration configuration) {
+    public InfluxDB1RepositoryImpl(InfluxDBConfiguration configuration, InfluxDBMetadataService influxDBMetadataService) {
         this.configuration = configuration;
+        this.influxDBMetadataService = influxDBMetadataService;
     }
 
     @Override
@@ -150,51 +153,47 @@ public class InfluxDB1RepositoryImpl implements InfluxDBRepository {
         if (currentClient != null) {
             Query parsedQuery = new Query(query, configuration.getDatabaseName());
             List<QueryResult.Result> results = currentClient.query(parsedQuery, TimeUnit.MILLISECONDS).getResults();
-            return convertClientResutToRepository(results);
+            return convertClientResultToRepository(results);
         } else {
             logger.warn("Returning empty list because queryAPI isn't present");
-            return Collections.emptyList();
+            return List.of();
         }
     }
 
-    private List<InfluxRow> convertClientResutToRepository(List<QueryResult.Result> results) {
+    private List<InfluxRow> convertClientResultToRepository(List<QueryResult.Result> results) {
         List<InfluxRow> rows = new ArrayList<>();
         for (QueryResult.Result result : results) {
-            List<QueryResult.Series> seriess = result.getSeries();
+            List<QueryResult.Series> allSeries = result.getSeries();
             if (result.getError() != null) {
                 logger.warn("{}", result.getError());
                 continue;
             }
-            if (seriess == null) {
+            if (allSeries == null) {
                 logger.debug("query returned no series");
             } else {
-                for (QueryResult.Series series : seriess) {
-                    logger.trace("series {}", series.toString());
-                    String itemName = series.getName();
-                    List<List<Object>> valuess = series.getValues();
-                    if (valuess == null) {
+                for (QueryResult.Series series : allSeries) {
+                    logger.trace("series {}", series);
+                    String defaultItemName = series.getName();
+                    List<List<Object>> allValues = series.getValues();
+                    if (allValues == null) {
                         logger.debug("query returned no values");
                     } else {
                         List<String> columns = series.getColumns();
                         logger.trace("columns {}", columns);
                         if (columns != null) {
-                            Integer timestampColumn = null;
-                            Integer valueColumn = null;
-                            for (int i = 0; i < columns.size(); i++) {
-                                String columnName = columns.get(i);
-                                if (columnName.equals(COLUMN_TIME_NAME_V1)) {
-                                    timestampColumn = i;
-                                } else if (columnName.equals(COLUMN_VALUE_NAME_V1)) {
-                                    valueColumn = i;
-                                }
-                            }
-                            if (valueColumn == null || timestampColumn == null) {
+                            int timestampColumn = columns.indexOf(COLUMN_TIME_NAME_V1);
+                            int valueColumn = columns.indexOf(COLUMN_VALUE_NAME_V1);
+                            int itemNameColumn = columns.indexOf(TAG_ITEM_NAME);
+                            if (valueColumn == -1 || timestampColumn == -1) {
                                 throw new IllegalStateException("missing column");
                             }
-                            for (int i = 0; i < valuess.size(); i++) {
-                                Double rawTime = (Double) valuess.get(i).get(timestampColumn);
+                            for (List<Object> valueObject : allValues) {
+                                Double rawTime = (Double) valueObject.get(timestampColumn);
                                 Instant time = Instant.ofEpochMilli(rawTime.longValue());
-                                Object value = valuess.get(i).get(valueColumn);
+                                Object value = valueObject.get(valueColumn);
+                                String itemName = itemNameColumn == -1 ? defaultItemName
+                                        : Objects.requireNonNullElse((String) valueObject.get(itemNameColumn),
+                                                defaultItemName);
                                 logger.trace("adding historic item {}: time {} value {}", itemName, time, value);
                                 rows.add(new InfluxRow(time, itemName, value));
                             }
@@ -209,5 +208,10 @@ public class InfluxDB1RepositoryImpl implements InfluxDBRepository {
     @Override
     public Map<String, Integer> getStoredItemsCount() {
         return Collections.emptyMap();
+    }
+
+    @Override
+    public FilterCriteriaQueryCreator createQueryCreator() {
+        return new InfluxDB1FilterCriteriaQueryCreatorImpl(configuration, influxDBMetadataService);
     }
 }
